# resume-checker

./: .gitignore  README.md  filter_resumes_by_experience.py  pyMuPDF.py  pyproject.toml  test_experience.py
.claude/skills/resume-checker/: SKILL.md
resumes/: resumes_extracted.xlsx
src/resume_checker/: __init__.py  cli.py  pdf.py  utils.py
src/resume_checker/extractors/: __init__.py  education.py  email.py  experience.py  name.py  phone.py  skills.py
tests/: conftest.py  test_education_edge_cases.py  test_email_edge_cases.py  test_experience.py  test_experience_edge_cases.py  test_extractors.py  test_integration.py  test_name_edge_cases.py  test_phone_edge_cases.py  test_skills_edge_cases.py  test_utils.py
