[project]
name = "resume-checker"
version = "0.1.0"
description = "Extract structured data from PDF resumes (Persian & English)"
readme = "README.md"
authors = [
    { name = "Mani Movassagh", email = "mani.mgh@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "PyMuPDF>=1.24.0",
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
    "tqdm>=4.60.0",
]

[project.scripts]
resume-checker = "resume_checker.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]
